# py-otp-manager

./: README.md  main.py  pyproject.toml
otp_manager/: otp_manager.py
